--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -3,8 +3,9 @@
     display: none;
   }
   width: 100%;
+  background-color: transparent;
   background: url(../assets/images/grid-elem@2x.png) no-repeat center bottom,
-    url(../assets/images/hero-bg.png) no-repeat;
+    url(../assets/images/hero-bg.png) no-repeat center right;
   background-size: 150%, cover;
 
   position: absolute;
@@ -16,6 +17,60 @@
   &__container {
     width: 100%;
     position: relative;
+  }
+
+  .aurora-animation {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    &__wrapper {
+      width: 100%;
+      height: 100%;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .animated-circle {
+      width: 400px;
+      height: 400px;
+      border-radius: 50%;
+      position: absolute;
+      filter: blur(130px);
+      opacity: 0.5;
+
+      transform: rotate(0) translate(200px) rotate(0);
+
+      &--one {
+        background-color: $color-aurora-circle-one;
+        bottom: 100px;
+        left: 200px;
+        animation: fly1 60s linear infinite both;
+      }
+
+      &--two {
+        background-color: $color-aurora-circle-two;
+        top: -200px;
+        left: -200px;
+        animation: fly2 60s linear infinite both;
+      }
+
+      &--three {
+        top: -60px;
+        right: 400px;
+        background-color: $color-aurora-circle-three;
+        animation: fly1 60s linear infinite both;
+      }
+
+      &--four {
+        bottom: 100px;
+        right: 100px;
+        background-color: $color-aurora-circle-four;
+        animation: fly2 60s linear infinite both;
+      }
+    }
   }
 
   &__text-box {
@@ -91,15 +146,14 @@
 
       .composition__img {
         opacity: 0;
-        animation: fadeIn 1.5s forwards,
-                   moveInRight 1s ease-out;
+        animation: fadeIn 1.5s forwards, moveInRight 1s ease-out;
         &--p1 {
           width: 450px;
           position: absolute;
           top: 30%;
           right: -23%;
           object-fit: cover;
-          animation-delay: 0s
+          animation-delay: 0s;
         }
 
         &--p2 {
@@ -108,7 +162,7 @@
           bottom: 5px;
           right: 260px;
           object-fit: cover;
-          animation-delay: .5s;
+          animation-delay: 0.5s;
         }
 
         &--p3 {
@@ -117,7 +171,7 @@
           bottom: 50px;
           right: -4%;
           object-fit: cover;
-          animation-delay: .7s;
+          animation-delay: 0.7s;
         }
 
         &--p4 {
@@ -401,8 +455,9 @@
     }
 
     &__image-box {
-      width: 100%;
+      $animation-parent-width: 100vw;
       height: 50px;
+      animation: scroll-left 20s linear infinite;
 
       display: inline-flex;
       justify-content: center;
@@ -516,7 +571,7 @@
       flex-direction: row;
       gap: 40px;
 
-      animation: scroll-left linear 10s infinite alternate;
+      animation: scroll-left 20s linear infinite alternate;
     }
 
     &--second,
@@ -524,6 +579,7 @@
       display: flex;
       flex-direction: row-reverse;
       gap: 40px;
+      animation: scroll-right 20s linear infinite alternate;
     }
 
     .tool {
