--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -70,7 +70,7 @@
   }
 
   &__background {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
@@ -92,7 +92,7 @@
 
       .navigation__navbar {
         height: 512px;
-        top: 200px;        
+        top: 200px;
       }
 
       .navigation__item {
@@ -155,7 +155,7 @@
   &__navbar {
     width: 100%;
     height: 100%;
-    position: absolut;
+    position: absolute;
     top: 0;
     left: 0;
     z-index: 75;
@@ -163,9 +163,9 @@
 
   &__list {
     position: relative;
-    margin: 160px auto;
+    margin: -50px auto;
 
-    text-align: center;    
+    text-align: center;
   }
 
   &__item {
@@ -177,7 +177,7 @@
     opacity: 0;
   }
 
-  &__link {    
+  &__link {
     display: inline-block;
     width: auto;
     position: relative;
@@ -232,7 +232,8 @@
   &__contact-wrapper {
     position: absolute;
     bottom: 100px;
-    left: calc((100% - 280px) / 2);
+    left: calc((100% - 250px) / 2);
+    
     text-align: center;
 
     a,
@@ -242,7 +243,6 @@
     }
   }
 }
-
 
 /* breakpoint 1660px */
 @media screen and (min-width: 1660px) {
@@ -310,12 +310,12 @@
 
     &__background.open &__list {
       position: absolute;
-      top: -150px;
-      left: 245px;   
-      text-align: left;   
+      top: 0px;
+      left: 245px;
+      text-align: left;
 
       a {
-        font-size: 48px;        
+        font-size: 48px;
       }
     }
   }
