--- a/sass/layout/_responsive.scss
+++ b/sass/layout/_responsive.scss
@@ -567,33 +567,46 @@
       }
 
       &__item {
+        width: 100px;
+        height: 100px;
+        border-radius: 40%;
         position: absolute;
-        transition: right 0.5s ease, top 0.5s ease;
-        transform: translate(0, -50%);
+
+        border: 1px solid red;
 
         &--first {
-          top: 35%;
-          right: 40px;
+          animation: carouselImageActive 30s infinite;
+          transition: right 0.5s ease, top 0.5s ease;
+          transform: translate(0, -50%);
         }
 
         &--second {
-          top: 10%;
-          right: 150px;
+          animation: carouselImageTop 30s infinite;
+          transition: right 0.5s ease, top 0.5s ease;
+          transform: translate(0, -50%);
         }
 
         &--third {
-          top: 40.2%;
-          right: 270px;
+          animation: carouselImageTopLeft 30s infinite;
+          transition: right 0.5s ease, top 0.5s ease;
+          transform: translate(0, -50%);
         }
 
         &--fourth {
-          top: 70%;
-          right: 250px;
+          animation: carouselImageBottomLeft 30s infinite;
+          transition: right 0.5s ease, top 0.5s ease;
+          transform: translate(0, -50%);
         }
 
         &--fifth {
-          top: 80%;
-          right: 75px;
+          animation: carouselImageBottom 30s infinite;
+          transition: right 0.5s ease, top 0.5s ease;
+          transform: translate(0, -50%);
+        }
+
+        img {
+          width: 100px;
+          height: 100px;
         }
       }
 
@@ -701,47 +714,55 @@
     .gallery-desktop {
       display: block;
     }
-    padding: 120px 55px 0 77px;
 
     &__container {
       width: 100%;
       display: flex;
       flex-direction: row;
+
+      border: 3px solid rgb(0, 153, 255);
     }
 
     &__grid-wrap {
       flex: 0 1 33%;
+      position: relative;
 
       &--first,
       &--third {
-        transform: translateY(-100px);
-
-        &.moveMe,
-        &.moveMe {
-          transition: transform 1s ease;
-          transform: translateY(-100px);
-        }
+        display: flex;
+        flex-direction: column;
+        border: 1px solid red;
+        //transform: translateY(-100px);
       }
 
       &--first {
         padding-right: 60px;
-
-        display: flex;
-        flex-direction: column;
         gap: 40px;
       }
 
       &--third {
         padding-left: 60px;
-
-        display: flex;
-        flex-direction: column;
         gap: 100px;
       }
 
       img {
         width: 100%;
       }
+    }
+
+    // /* animation */
+    .appear {
+      -webkit-transition: all 0.8s;
+      transition: transform 1s ease; //all 0.8s;
+      -webkit-transform: translateY(100px);
+      transform: translateY(100px);
+    }
+
+    .appear.inview {
+      -webkit-transform: none;
+      transform: none;
+      -webkit-transition-delay: 0.3s;
+      transition-delay: 0.3s;
     }
   }
 
